<resources>
    <string name="app_name">Circular</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="tap_to_write">Tap to write</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="forgot_password2">Forgot password</string>
    <string name="email_quest">What\'s the email you signed up with?</string>
    <string name="sign_back">Back to sign in screen</string>
    <string name="resend_an_email">Resend an email</string>
    <string name="email_confirm">We\'ve just sent you an email with your new password.</string>
    <string name="tell_us">Tell us more about yourself</string>
    <string name="what_gender">What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="when_born">When are you born?</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="select_weight">Select your weight</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="select_height">Select your height</string>
    <string name="next">Next</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="close">Close</string>
    <string name="store">Store</string>
    <string name="quick_access">Quick access</string>
    <string name="profile">Profile</string>
    <string name="blog">Blog</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="settings">Settings</string>
    <string name="debugger">Debugger</string>
    <string name="my_ring">My ring</string>
    <string name="my_circles">My circles</string>
    <string name="add_circle">Add a circle</string>
    <string name="add_circle_n">Add a\ncircle</string>
    <string name="alarm_clock">Alarm clock</string>
    <string name="alarm_clock_n">Alarm\nclock</string>
    <string name="sleep_analysis">Sleep analysis</string>
    <string name="sleep_analysis_n">Sleep\nanalysis</string>
    <string name="activity_analysis">Activity analysis</string>
    <string name="activity_analysis_n">Activity\nanalysis</string>
    <string name="alarm">Alarm</string>
    <string name="sleep_mode_off">Sleep mode\noff</string>
    <string name="sleep_mode_on">Sleep mode\non</string>
    <string name="_9_00_am_off">9:00 AM\noff</string>
    <string name="_9_00_am_on">9:00 AM\non</string>
    <string name="calendar">Calendar</string>
    <string name="good_morning">Good morning Wiliam!</string>
    <string name="weather_today">Today you\'ll have beautiful weather, conducive to surprassing oneself.</string>
    <string name="disturbances">Disturbances</string>
    <string name="_3hr_ago">3hr ago</string>
    <string name="sleep_status">You had a lot of disturbance these past nights but your sleep debt is fine. You\'ve slept less than 85% of the time you were on bed, trying to sleep. This results in getting less restorative sleep.</string>
    <string name="sleep">SLEEP</string>
    <string name="duly_noted">Duly noted</string>
    <string name="cause_ttl">Which cause might this be related to? Check one</string>
    <string name="temparature">Temparature</string>
    <string name="anxiety">Anxiety</string>
    <string name="medication">Medication</string>
    <string name="late_alcohol">Late alcohol</string>
    <string name="late_caffeine">Late caffeine</string>
    <string name="pain">Pain</string>
    <string name="blue_light">Blue light</string>
    <string name="late_meal">Late meal</string>
    <string name="lack_of_activity">Lack of activity</string>
    <string name="out_of_schedule">Out of schedule</string>
    <string name="sickness">Sickness</string>
    <string name="other">Other</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="activity">ACTIVITY</string>
    <string name="steps">Steps</string>
    <string name="_5_00_pm">5:00 PM</string>
    <string name="activity_status">It’s recommended to take 10 000 steps a day. This month your average was 6 450 steps a day. We can track your steps and remind you every now and then to go for a walk.</string>
    <string name="fix">Let me fix that for you.</string>
    <string name="activate_step">Do you want to activate daily step tracking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alerts</string>
    <string name="batterry">Batterry</string>
    <string name="kate_s_us_10">Kate\'s US 10</string>
    <string name="sleep_mode">Sleep mode</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="setup_a_new_ring">Setup a new ring</string>
    <string name="firmware">Firmware</string>
    <string name="firm_ver">0.32.1</string>
    <string name="bootloader">Bootloader</string>
    <string name="bootloader_ver">0.38.2</string>
    <string name="mac_address">MAC address</string>
    <string name="mac_value">00–14–22–01–23–45</string>
    <string name="soft_reset">Soft reset</string>
    <string name="factory_reset">Factory reset</string>
    <string name="q_confirm">Please confirm</string>
    <string name="q_softreset">Do you confirm that you wish to soft reset your ring?</string>
    <string name="d_softreset">All of your data will be erased.</string>
    <string name="q_hardreset">Do you confirm that you wish to factory reset your ring?  </string>
    <string name="sleep_qualuty_score">Sleep quality score</string>
    <string name="good">Good</string>
    <string name="sleep_duration">Sleep duration</string>
    <string name="sleep_quality_details">Sleep quality details</string>
    <string name="sleep_detail">Sleep detail</string>
    <string name="sleep_stages">Sleep stages</string>
    <string name="today">Today</string>
    <string name="past_week">Past week</string>
    <string name="past_month">Past month</string>
    <string name="hrv">HRV</string>
    <string name="hrs">HRS</string>
    <string name="spo2">SpO2</string>
    <string name="d_disturbance_detail">Calculated in minutes, they correspond to the time you were awake during your sleep.\n\nThe minutes are added up in the morning and help to calculate real sleep. Waking up several times during your sleep is natural but too much time awake might reflect sleeping disorders or overall poor sleep quality.\n\nThe displayed percentage corresponds to how much you have been awake during the time you were supposed to be sleeping. More than 20% of the time is considered unhealthy and might be caused by many internal or external factors.</string>
    <string name="d_real_sleep">Real sleep is a derivative of sleep efficiency. It reflects the time you actually slept during your sleep period. In fact, it evaluates your disturbances since real sleep is total sleep minus disturbances.\n\nIt is a great indicator of overall sleep quality as a sleep efficiency percentage that is too high reflects many disturbances (internal or external factors keeping you awake).\n\nAnything below 80% is considered poor and will negatively impact your sleep quality score. Reciprocally, a real sleep score over 90% is excellent. Anything in between is average!</string>
    <string name="d_tranquility">It determines how much you have moved during your sleep (in total volume).\n\nAn agitated night is often a sign of bad sleeping habits. We divide the score you see in 3 indicators: agitated, still and peaceful.</string>
    <string name="d_circidian">Our circadian rhythm is basically a 24-hour internal clock that is running in the background of your brain and cycles between sleepiness and alertness at regular intervals.\n\nIt\'s also known as your sleep/wake cycle. It is tremendously important to sleep and wake up at the same time each day as it impacts directly your overall sleep quality.\n\nKali will compare automatically your usual sleep schedule to your weekly history to determine whether you are following your rhythm or not. The classification has 3 stage: Poor, average or optimal.</string>
    <string name="d_REM_sleep">REM sleep is the phase which is responsible for restoration and memory consolidation.\n\nThe displayed percentage is your night\'s total REM sleep time divided by your night\'s real sleep.\n\nThe recommended average for adults depends on a lot of factors including age for example (between 20 and 25% of your night).\n\nKali knows your needs and will take into consideration if you had enough REM or if you are deprived of it to measure overall sleep quality.</string>
    <string name="d_deep_sleep">It is the phase that allows the reparation of muscles and tissues, that stimulates growth and development, boosts immune function, and builds up energy for the next day. The displayed percentage is your night\'s total REM sleep time divided by your night\'s real sleep.\n\nKali knows your needs and will take into consideration if you had enough deep sleep or if you are deprived of it to measure overall sleep quality.\n\nAnything below 15% deep sleep during your night is considered very poor and anything above 20% is considered sane!</string>
    <string name="d_time_to_sleep">Better known as sleep latency, it is the length of time that it takes to accomplish the transition from full wakefulness to sleep.\n\nYour time to fall asleep can be modified by external or internal factors such as caffeine or screens before going to bed.\n\nKali calculates a baseline sleep latency which corresponds to a sleep latency average during a normal week. Variations from this baseline indicate factors influencing it and directly impacts your sleep quality.\n\nKali combines your night\'s latency compared to your baseline latency with scientific norms to give a score (the progression bar you see). Sleep specialists agree to say that a sleep latency below 5 minutes is not normal and anything above 30 minutes is too much.</string>
    <string name="d_sleep_debt">Sleep debt is the cumulative effect of not getting enough sleep or getting to much sleep.\n\nEither one is bad for your body. Sleep debt looks at how much you have actually slept (real sleep) compared to your personal sleeping length needs. Any deviation from your personal needs whether more or less sleep will impact negatively your sleep debt indicator.</string>
    <string name="t_real_sleep">Real sleep</string>
    <string name="t_tranq">Tranquility</string>
    <string name="t_circadian">Circadian rhytm</string>
    <string name="t_rem_sleep">REM sleep</string>
    <string name="t_deep_sleep">Deep sleep</string>
    <string name="t_time_to_sleep">Time to fall asleep</string>
    <string name="t_sleep_debt">Sleep debt</string>
    <string name="debug_uart">UART</string>
    <string name="new_alert">NEW ALERT</string>
    <string name="app">App</string>
    <string name="all">All</string>
    <string name="from_contact">From contact</string>
    <string name="repetition">Repetition</string>
</resources>