<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_store"
            android:title="@string/store" />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qaccess"
            android:title="@string/quick_access" />
    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
    </group>
    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blog"
            android:title="@string/blog" />
    </group>
    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leaderboards"
            android:title="@string/leaderboards" />
    </group>
    <group
        android:id="@+id/grp6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/calendar" />
    </group>
    <group
        android:id="@+id/grp7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>
    <group
        android:id="@+id/grp8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_debugger"
            android:title="@string/debugger" />
    </group>
    <group
        android:id="@+id/grp9"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_uart"
            android:title="@string/debug_uart" />
    </group>

</menu>
