<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tofa.circular.AlertNewActivity">

    <com.tofa.circular.customclass.ToolbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbarIcon="@mipmap/ic_alert"
        app:toolbarTitle="@string/new_alert">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="-40dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/radio_right" />
    </com.tofa.circular.customclass.ToolbarView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app"
        android:textColor="#38454C"
        android:textSize="18sp" />

    <com.tofa.circular.customclass.MyGridView
        android:id="@+id/gv_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:padding="10dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/all"
        android:background="@color/colorDarkGrey"
        android:textColor="#364249"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/from_contact"
        android:background="@color/colorDarkGrey"
        android:textColor="#364249"
        android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/repetition"
                android:textColor="#38454C"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>
